fix align center for ctas

--- a/source/_patterns/01-atoms/links/call-to-action/_call-to-action.scss
+++ b/source/_patterns/01-atoms/links/call-to-action/_call-to-action.scss
@@ -29,6 +29,11 @@ a.button.button.button,
     font-size: var(--font-size--md);
   }
 
+  &.align-center {
+    margin-left: 50%;
+    transform: translatex(-50%);
+  }
+
   &:visited {
     color: var(--white);
   }
